--- a/app/src/main/res/layout/activity_tela2_intent_result.xml
+++ b/app/src/main/res/layout/activity_tela2_intent_result.xml
@@ -7,13 +7,14 @@
     tools:context=".Tela2IntentResultActivity">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/finalizar_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:onClick="finalizar_resultado"
         android:text="FINALIZAR"
         android:textColor="@android:color/holo_blue_bright"
         app:layout_constraintBaseline_toBaselineOf="@+id/button5"
